<resources>
    <string name="app_name">orderonthego</string>
    <string name="action_settings">Settings</string>
    <string name="additem">Add New Item</string>

    <string name="Catagoty_prompt">Choose a Category</string>
    <string name="SubmitButtonadditem">Submit</string>
    <string name="additemtv">Add Item</string>
    <string name="admindeleteitem">Delete</string>
    <string name="adminDelet">Delet Item</string>
    <string name="edititemprice">Edit Price</string>
    <string name="savenewproce">Save</string>
    <string name="welcome1">Welcome</string>
    <string name="check_total">Check Total</string>
    <string name="order">Order</string>
    <string name="login">Login</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="Enter">Enter</string>
    <string name="enter_only">Enter only 10 digit Mobile number</string>
    <string name="nonvegitem">Add Non-Veg Item</string>

    <string-array name="Categories">
        <item>Starter</item>
        <item>Main_Course</item>
        <item>Deserts</item>
        <item>Others</item>
    </string-array>

    <string-array name="Numberofitem">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>
</resources>
