<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#d4cec2"
    android:id="@+id/linearlayadminedit4"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayadminedit2">
        <include layout="@layout/toolbar" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login"
            android:id="@+id/textViewLogin"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mobile_number"
            android:id="@+id/textViewmob"
            android:layout_gravity="center_horizontal" />



      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="50sp"
          android:layout_marginRight="50sp"
          android:layout_marginTop="55sp"
          android:hint="@string/enter_only"/>


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter"
            android:layout_marginTop="55sp"
            android:layout_gravity="center"
            />



    </LinearLayout>


</LinearLayout>