<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayadminedit3">
        <include layout="@layout/toolbar" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome1"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/InnerRelativeLayout">


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />

        </ScrollView>
    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/InnerRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >




        <Button
            android:id="@+id/btnCheck"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:text="@string/check_total"
            >
        </Button>




        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_alignParentRight="true">
        </Button>

        </RelativeLayout>



    </RelativeLayout>

</LinearLayout>
