<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#d4cec2"
    android:id="@+id/linearlayadminedit1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayadminedit2">
        <include layout="@layout/toolbar" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ilayout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/additemtv"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />


        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:entries="@array/Categories"
            android:prompt="@string/Catagoty_prompt"
            />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Numberofitem"
            android:prompt="@string/Catagoty_prompt"
            />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SubmitButtonadditem"
            android:layout_gravity="center"
            />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:visibility="visible"
            >
        <LinearLayout
            android:id="@+id/edlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


        </LinearLayout>
        </ScrollView>





    </LinearLayout>


</LinearLayout>
